fix: rename method getNodeByType and add custom exception for null parameters